Fix dark mode icon and timeline button

--- a/src/components/VerticalTimeLine/VerticalTimeLine.module.scss
+++ b/src/components/VerticalTimeLine/VerticalTimeLine.module.scss
@@ -17,8 +17,8 @@
 }
 .logo_btn {
   position: absolute;
-  height: 50px;
   width: 50px;
+  background: transparent;
   border: none;
   cursor: pointer;
   img {
@@ -28,7 +28,6 @@
 }
 
 .active {
-  height: 60px;
   width: 60px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
